# OP

./: .gitignore
DisMatProgramm/1.3/: CMakeLists.txt  main.cpp
DisMatProgramm/1.4/: CMakeLists.txt  main.cpp
DisMatProgramm/2.1/: CMakeLists.txt  main.cpp
DisMatProgramm/2.2/: CMakeLists.txt  main.cpp
DisMatProgramm/untitled/: main.cpp
Lab 1/1/: main.c
Lab 1/2/: main.c
Lab 1/3/: main.c
Lab 2/a/1/: main.c
Lab 2/b/: Лабораторная работа №2b.docx
Lab 3/a/: Лабораторная работа №3а.docx  Лабораторная работа №3а.xlsx
Lab 4/d/: .~lock.Лабораторная работа 4d.odt#
Lab 5/a/: main.zippp
Lab 5/b/: CMakeLists.txt  das  main.c
Lab 5/b/libs/array/: array.c  array.h
Lab 5/b/libs/data_structures/vector/: vector.c  vector.h  voidVector.c  voidVector.h
Lab 5/c/: CMakeLists.txt  main.c
Lab 5/d/: CMakeLists.txt  main.c
Lab 5/e/: CMakeLists.txt  main.c
Lab 5/e/libs/string/: string_.c  string_.h
Lab 5/e/libs/string/tasks/: 10_reverseWordInString.c  10_reverseWordInString.h  11_printWordBeforeFirstWordWithA.c  11_printWordBeforeFirstWordWithA.h  12_lastCommonWord.c  12_lastCommonWord.h  13_haveSameWord.c  13_haveSameWord.h  15_differentFromTheLastWord.c  15_differentFromTheLastWord.h  16_lastCommonWords.c  16_lastCommonWords.h  18_padTheSmallerString.c  18_padTheSmallerString.h  1_digitToStartTransform.c  1_digitToStartTransform.h  2_removeAdjacentEqualLetters.c  2_removeAdjacentEqualLetters.h  3_getWord.c  3_getWord.h  4_replaceNumberDigitsBySpace.c  4_replaceNumberDigitsBySpace.h  5_replace.c  5_replace.h  6_isOrderedWord.c  6_isOrderedWord.h  7_outputReverse.c  7_outputReverse.h  8_countPalindroms.c  8_countPalindroms.h  9_wordAlternation.c  9_wordAlternation.h  tests.c  tests.h
Lab 6/a/: CMakeLists.txt  codeforces.cpp  main.cpp
Lab 6/b/: CMakeLists.txt  main.cpp
Lab 6/e/: CMakeLists.txt
Lab 6/e/deque/: deque.h
Lab 6/e/deque/1. SocWeb/: CMakeLists.txt  main.cpp
Lab 6/e/deque/tennis/: CMakeLists.txt  main.cpp
Lab 6/e/list/: list.h  testsList.cpp  testsList.h
Lab 6/e/queue/: queue.h
Lab 6/e/queue/1. GodOfStack/: CMakeLists.txt  main.cpp
Lab 6/e/queue/2. Photo/: CMakeLists.txt  main.cpp
Lab 6/e/stack/: stack.h
Lab 6/e/stack/1. gameString/: CMakeLists.txt  main.cpp
Lab 6/e/stack/2. ABBB/: CMakeLists.txt  main.cpp
Lab 6/e/stack/3. belka/: CMakeLists.txt  main.cpp
Lab 6/e/stack/4. card/: CMakeLists.txt  main.cpp
Lab 6/f/: CMakeLists.txt  latex.txt  main.cpp
Lab 6/f/BitSet/: BitSet.cpp  BitSet.h
Lab 6/f/MaterialPoint/: MaterialPoint.cpp  MaterialPoint.h
Lab 6/f/PrefixSum/: PrefixSum.cpp  PrefixSum.h
Lab 6/f/algorithms/: algorithms.cpp  algorithms.h
Lab 6/f/fraction/: Fraction.cpp  Fraction.h
Practice/1/: main.cpp
Practice/10/: CMakeLists.txt
Practice/11/: excel.xlsx
Practice/2/: main.cpp
Practice/3/: main.cpp
Practice/4/: main.cpp
Practice/5/: main.cpp
Practice/6/: CMakeLists.txt  main.cpp
Practice/7/: CMakeLists.txt  main.cpp
Practice/8/: main.cpp
libs/: CMakeLists.txt
(+387 files in other folders)
